xidlc/tests/invalid/http_security_conflict_no_security.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidConflictingSecurityService {
    @no-security
    @http-bearer
    @get(path = "/reports")
    string list_reports();
};
